--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "jest-watch-typeahead": "0.3.0",
         "less": "^3.9.0",
         "less-loader": "^5.0.0",
+        "lodash": "^4.17.11",
         "mini-css-extract-plugin": "0.5.0",
         "optimize-css-assets-webpack-plugin": "5.0.1",
         "pnp-webpack-plugin": "1.2.1",
@@ -49,6 +50,7 @@
         "postcss-safe-parser": "4.0.1",
         "react": "^16.8.6",
         "react-app-polyfill": "^1.0.1",
+        "react-beautiful-dnd": "^11.0.3",
         "react-dev-utils": "^9.0.1",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
