--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-promise-middleware": "^6.1.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "semver": "6.0.0",
